<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_black"

    >

    <com.whosin.business.comman.ui.roundcornerlayout.RoundCornerLinearLayout
        android:id="@+id/roundMale"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@color/light_black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_5sdp"
        app:corner_radius="@dimen/_6sdp"
        android:elevation="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tvGender"
            style="@style/txt12RegularWhite85"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:gravity="center"
            android:text= "@string/select_gender"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"
            />
        <TextView
            android:id="@+id/tvMale"
            style="@style/txt15Regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:gravity="center"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:text="@string/edtMale"
           />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"
           />
        <TextView
            android:id="@+id/tvFemale"
            style="@style/txt15Regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/edtFemale"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/grey"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tvOther"
            style="@style/txt15Regular"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/edtPrefer" />

    </com.whosin.business.comman.ui.roundcornerlayout.RoundCornerLinearLayout>



    <com.whosin.business.comman.ui.roundcornerlayout.RoundCornerLinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@color/light_black"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_5sdp"
        app:corner_radius="@dimen/_6sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/roundMale"
        app:layout_constraintBottom_toBottomOf="parent"
      >


        <TextView
            android:id="@+id/tvCancel"
            style="@style/txt15Regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_6sdp"
            android:text="@string/cancel"
            android:textColor="@color/brand_pink"
            />

    </com.whosin.business.comman.ui.roundcornerlayout.RoundCornerLinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>