<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".ui.activites.auth.AuthenticationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_75sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/appicon" />

        <TextView
            style="@style/authTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="center"
            android:text="Login to your account"
            />

        <TextView
            style="@style/authSubTitleText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:gravity="center"
            android:text="@string/enter_password" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editTextPassword"
                style="@style/MyEditText"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:inputType="textPassword"
                android:hint="@string/enter_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="h,381:49"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginVertical="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:src="@drawable/icon_login_next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="h,1:1"
                app:layout_constraintEnd_toEndOf="@id/editTextPassword"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                style="@style/txt12Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/forgot_your_password"
                android:textColor="@color/privacy_txt" />

            <TextView
                android:id="@+id/resetPassword"
                style="@style/txt12Regular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/Click_here"
                android:textColor="@color/brand_pink" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>