<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    tools:context=".ui.activites.auth.AuthUserPhoneNumberActivity">


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_15sdp"
        android:src="@drawable/icon_left_back_arrow" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:src="@drawable/splash_icon" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_minus9sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvMainTitle"
                    style="@style/authTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/welcome_to_whosin" />

                <TextView
                    style="@style/authTitleText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:gravity="center"
                    android:text="WHOS’IN"
                    android:textColor="@color/brand_pink" />


            </LinearLayout>

            <TextView
                android:id="@+id/tvSignUpOrLoginTitle"
                style="@style/txt11RegularWhite85"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/welcome_to_whosin_bottomtxt" />

            <com.whosin.app.comman.ui.roundcornerlayout.RoundCornerConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/img_search_border"
                android:layout_marginVertical="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_10sdp">

                <LinearLayout
                    android:id="@+id/inputContainer"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="h,381:49"
                    android:paddingVertical="@dimen/_5sdp"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/countryCode"
                        style="@style/CountryPickerStyleForSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_35sdp"
                        android:gravity="center_vertical|end"
                        android:layout_gravity="center_vertical"
                        android:visibility="gone"
                        app:ccpDialog_background="@color/black"
                        app:ccpDialog_showPhoneCode="false"
                        android:layout_marginStart="@dimen/_10sdp"
                        app:ccp_showFullName="false"
                        app:ccp_showNameCode="false"
                        app:ccp_showPhoneCode="true"
                        app:ccp_textSize="@dimen/_11sdp" />

                    <EditText
                        android:id="@+id/editTextPhone"
                        style="@style/CommonEditText"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:hint="@string/enter_email_or_mobile_number"
                        android:inputType="textEmailAddress"
                        android:layout_marginStart="@dimen/_minus6sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/btnContinue"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginVertical="@dimen/_5sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:src="@drawable/icon_login_next"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="h,1:1"
                    app:layout_constraintEnd_toEndOf="@id/inputContainer"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.whosin.app.comman.ui.roundcornerlayout.RoundCornerConstraintLayout>

            <TextView
                android:id="@+id/termsCondition"
                style="@style/txt10Regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/refer_to_our_privacy_policy"
                android:textColor="@color/privacy_txt" />



        </LinearLayout>

    </ScrollView>

    <com.whosin.app.ui.controller.RoundButton
        android:id="@+id/imageNext"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_55sdp"
        app:centerImg="@drawable/icon_next"
        app:imgMargin="@dimen/_8sdp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>